testsuite/tests/typecheck/should_fail/tcfail179.stderr

tcfail179.hs:14:41: error:
    Couldn't match type ‘x’ with ‘s’
    ‘x’ is a rigid type variable bound by
        a pattern with constructor:
          T :: forall s x. (s -> (x -> s) -> (x, s, Int)) -> T s,
        in a case alternative
        at tcfail179.hs:14:14
    ‘s’ is a rigid type variable bound by
        the type signature for: run :: T s -> Int at tcfail179.hs:12:8
    Expected type: x -> s
      Actual type: s -> s
    Relevant bindings include
      x :: s (bound at tcfail179.hs:14:26)
      g :: s -> (x -> s) -> (x, s, Int) (bound at tcfail179.hs:14:16)
      ts :: T s (bound at tcfail179.hs:13:5)
      run :: T s -> Int (bound at tcfail179.hs:13:1)
    In the second argument of ‘g’, namely ‘id’
    In the expression: g x id
    In a pattern binding: (x, _, b) = g x id
